# AudioVisualiser

./: AudioVisualiser.jucer  CMakeLists.txt  README.md
Builds/VisualStudio2022/: AudioVisualiser.sln
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: AVAPIResolver.h  AVIOHandler.h  AppQRComponent.h  AskAI.h  CircularBuffer.cpp  CircularBuffer.h  Classic1_2D.h  Classic2_2D.h  Classic3_2D.h  Classic4_2D.h  CreateVideoComponent.h  GlobalSocketHandler.h  LoginComponent.h  Mesh.h  OpenGLComponent.cpp  OpenGLComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RenderHeaders.h  RenderObject3D.h  RenderProfileComponent.cpp  RenderProfileComponent.h  RenderState.cpp  RenderState.h  RenderState2D.cpp  RenderState2D.h  RenderState3D.cpp  RenderState3D.h  RingBuffer.h  SDF_1_2D.h  SelectorTabPanel.cpp  SelectorTabPanel.h  Settings.cpp  Settings.h  SettingsComponent.h  SocketCueResolver.h  StrHelper.h  TVImageOverlay.h  (+7 more)
scripts/: DownloadWebView2.ps1  av-client.py
ui/public/: appqr.html  index.html  register.html  settings.css  settings.html  style.css
ui/public/js/: index.js  register.js  settings.js
